<resources>
    <string name="app_name">Disaster</string>
    <string name="userNewsSearch">Search</string>
    <string name="navigation_drawer_open">opened</string>
    <string name="navigation_drawer_close">closed</string>
    <string name="tool_text">Tools</string>
    <string name="maps_text">Maps</string>
    <string name="news_text">News</string>
    <string name="setting_text">Settings</string>
    <string name="home_text">Home</string>
    <string name="dark_mode_text">Dark Mode</string>
    <string name="location_text">Location</string>
    <string name="android_txt">Android</string>
    <string name="pandemic_txt">Pandemic</string>
    <string name="landslide_txt">Landslide</string>
    <string name="earthquake_txt">Earthquake</string>
    <string name="thunderstorm_txt">Thunderstorm</string>
    <string name="nuclear_txt">Nuclear</string>
    <string name="fire_txt">Fire</string>
    <string name="flood_txt">Floods</string>
    <string name="dialog_name">Name</string>
    <string name="dialog_panic_info">Panic Info</string>
    <string name="dialog_phone_number">Phone number</string>
    <string name="dialog_address">Address</string>
    <string name="dialog_submit">Submit</string>
    <string name="dialog_header_content_descritpion">The header</string>
    <string name="panic_button">Panic button</string>
    <string name="title_activity_flood_disaster">FloodDisaster</string>
    <string name="tab_text_Tips">Tips</string>
    <string name="tab_text_Checklist">Checklist</string>
    <string name="field_not_filled">All field needs to be filled</string>
    <string name="weatherTxt">Weather</string>
    <string name="temperatureTxt">0C</string>
    <string name="license">License</string>
    <string name="licenseFinePrint">I don\'t know what to put hereeeee.</string>
    <string name="ok">OK</string>
    <string name="about">About</string>
    <string name="aboutFinePrint">I don\'t know what to put hereeeee.</string>
    <string name="title_activity_maps">Area Map</string>


</resources>
