<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorBackground"
    >


    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_place_black_24dp"
        android:text="@string/location_text"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11" />


    <ImageButton
        android:id="@+id/floodImageButton"
        android:onClick="floodDisaster"
        android:layout_width="135dp"
        android:layout_height="75dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/floods"
        android:contentDescription="@string/flood_txt"
        android:elevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationTextView" />

    <ImageButton
        android:id="@+id/wildfireImageButton"
        android:onClick="fireDisaster"
        android:layout_width="135dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/firewild"
        android:contentDescription="@string/fire_txt"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/floodImageButton"
        app:layout_constraintTop_toTopOf="@+id/floodImageButton" />

    <ImageButton
        android:id="@+id/nuclearImageButton"
        android:layout_width="135dp"
        android:layout_height="75dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/nuklear"
        android:contentDescription="@string/nuclear_txt"
        android:elevation="10dp"
        app:layout_constraintStart_toStartOf="@+id/floodImageButton"
        app:layout_constraintTop_toBottomOf="@+id/floodImageButton" />

    <ImageButton
        android:id="@+id/thunderStormImageButton"
        android:layout_width="135dp"
        android:layout_height="75dp"
        android:background="@drawable/thunderstorm"
        android:contentDescription="@string/thunderstorm_txt"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="@+id/wildfireImageButton"
        app:layout_constraintStart_toStartOf="@+id/wildfireImageButton"
        app:layout_constraintTop_toTopOf="@+id/nuclearImageButton" />

    <ImageButton
        android:id="@+id/earthquakeImageButton"
        android:layout_width="135dp"
        android:layout_height="75dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/quake"
        android:contentDescription="@string/earthquake_txt"
        android:elevation="10dp"
        app:layout_constraintStart_toStartOf="@+id/nuclearImageButton"
        app:layout_constraintTop_toBottomOf="@+id/nuclearImageButton" />

    <ImageButton
        android:id="@+id/landslideImageButton"
        android:layout_width="135dp"
        android:layout_height="75dp"
        android:background="@drawable/landsilepic"
        android:contentDescription="@string/landslide_txt"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="@+id/thunderStormImageButton"
        app:layout_constraintStart_toStartOf="@+id/thunderStormImageButton"
        app:layout_constraintTop_toTopOf="@+id/earthquakeImageButton" />

    <ImageButton
        android:id="@+id/pandemicImageButton"
        android:layout_width="135dp"
        android:layout_height="75dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/pandemic"
        android:contentDescription="@string/pandemic_txt"
        android:elevation="10dp"
        app:layout_constraintStart_toStartOf="@+id/earthquakeImageButton"
        app:layout_constraintTop_toBottomOf="@+id/earthquakeImageButton" />

    <ImageButton
        android:id="@+id/androidH20ImageButton"
        android:layout_width="135dp"
        android:layout_height="75dp"
        android:background="@drawable/vanier_android"
        android:contentDescription="@string/android_txt"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="@+id/landslideImageButton"
        app:layout_constraintStart_toStartOf="@+id/landslideImageButton"
        app:layout_constraintTop_toTopOf="@+id/pandemicImageButton" />

    <LinearLayout
        android:id="@+id/nav_footer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:background="@color/colorNavFooter"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>