<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground">

    <ImageView
        android:id="@+id/dialog_header"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="45dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/dialog_header_content_descritpion"
        app:layout_constraintBottom_toTopOf="@+id/dialog_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/divider_horizontal_dark" />

    <TextView
        android:id="@+id/panic_info_txt"
        android:layout_width="150dp"
        android:layout_height="43dp"
        android:text="@string/dialog_panic_info"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryLighter"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_header"
        app:layout_constraintEnd_toEndOf="@+id/dialog_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dialog_header" />

    <EditText
        android:id="@+id/dialog_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/dialog_name"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_header" />

    <EditText
        android:id="@+id/dialog_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/dialog_phone_number"
        android:inputType="phone"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_name" />

    <EditText
        android:id="@+id/dialog_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/dialog_address"
        android:inputType="textPostalAddress"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_phone_number" />


    <Button
        android:id="@+id/dialog_submit_button"
        android:layout_width="108dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="84dp"
        android:text="@string/dialog_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_address" />
</androidx.constraintlayout.widget.ConstraintLayout>